# Python_Anesthesia_Simulator

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt
docs/: .readthedocs.yaml  requirements.txt
docs/source/: conf.py  contributing.md  disturbances.rst  examples.rst  index.rst  metrics.rst  modelling_anesthesia.rst  pd_models.rst  pk_models.rst  python_anesthesia_simulator.rst  simulator.rst  src.python_anesthesia_simulator.rst  tci_control.rst
docs/source/examples/: TCI_example.ipynb  blood_loss_simu.ipynb  check_vitalDB_model.ipynb
docs/source/model/: Non-linear interactions.rst  Pharmacodynamics.rst  Pharmacokinetics.rst
matlab/: README.md
matlab/examples/: open_loop_simulation.m  open_loop_simulation.md
matlab/examples/closed_loop_simulation/: closed_loop_simulation.m  closed_loop_simulation.md  pid_ratio.m
matlab/examples/open_loop_simulation/: open_loop_simulation.m  open_loop_simulation.md
src/: compute_disturbances_V2.py
src/python_anesthesia_simulator/: __init__.py  disturbances.py  metrics.py  pd_models.py  pk_models.py  simulator.py  simulator.py.bak  tci_control.py
tests/: test_bis_models.py  test_blood_loss.py  test_disturbance_and_metrics.py  test_equilibrium.py  test_norepinephrine_model.py  test_random_generation.py  test_simulation.py  test_tci.py
